Clean up GetUberRides.

--- a/GetUberRides.ipynb
+++ b/GetUberRides.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "As a full-time Uber driver, I'm interested in performing analysis on my past rides so I can make informed choices about driving in the future and how to optimize for higher earnings. However, when I log in to the [Uber Drivers](https://drivers.uber.com/earnings/activities) page, I can only view my past rides a week at a time, and that weekly view is frustratingly paginated and lacks relevant details. Being a programmer, I naturally thought of downloading the data through an API. As of August 24, 2024 access to the [Uber Drivers API](https://developer.uber.com/docs/drivers/introduction) is \"limited\" and there's a vague message on their info page about applying for access. So that's not a solution for my personal data needs. \n",
     "\n",
-    "**Caveat**: This is likely against the Uber Drivers TOS and I'm engaging with this at my own risk of potentially haveing my account limited/banned, but I really want to get this data and I'm requesting in a reasonable manner. I am also working to change my career from full-time Uber driver to Data Analyst (_PLEASE HIRE ME!_), so my hope is that this project will help me transition my career before Uber is able to notice and limit/ban me. **Proceed at your own risk.** \n",
+    "**Caveat**: This is likely against the Uber Drivers TOS and I'm engaging with this at my own risk of potentially haveing my account limited/banned, but I really want to get this data and I'm requesting in a reasonable manner. **Proceed at your own risk.** \n",
     "\n",
     "## Reverse Engineering the Uber Drivers page\n",
     "\n",
@@ -34,8 +34,6 @@
     "Importantly, this is all occurring inside an authenticated HTTPS session. In my initial discovery and testing, I used Postman to perform the requests. Through the Network tab in the Google Chrome Developer Console, I right-clicked the POST request, chose `Copy > Copy as cURL`, and then imported that into Postman using `File > Import...`. \n",
     "\n",
     "After confirming it worked, I migrated to Python to request everything programmatically. To generate starter code for Python requests, in Postman on this particular request I chose the `Code` option in the pane on the right side of the window, then chose \"Python - Requests\" from the drop-down menu. This includes the full authentication tokens in plaintext on the `cookies` key of the headers dictionary. \n",
-    "\n",
-    "In order to be able to share this code, and to easily update this code if my cookies expire/change, I used [this Google Chrome extension](https://chromewebstore.google.com/detail/get-cookiestxt-locally/cclelndahbckbenkjhflpdbgdldlbecc) to save my drivers.uber.com cookies to a Mozilla Firefox-format cookies.txt file local to this Jupyter Notebook and used the [browsercookie](https://pypi.org/project/browsercookie/) Python library to load that into the headers dictionary. If/when the cookies expire, all I need to do is re-visit the Uber Drivers page and re-save the cookies to the cookies.txt file.\n",
     "\n",
     "With all of the data downloaded, I extract the rides data specifically and save this to a local JSON file so I don't have to re-request the data. I then perform some data cleaning, parsing, and enrichment to ultimately produce CSV files that I can easily analyze with other programs and import into a spreadsheet. "
    ]
@@ -69,7 +67,8 @@
     "          'accept': '*/*',\n",
     "          'accept-language': 'en-US,en;q=0.9',\n",
     "          'content-type': 'application/json',\n",
-    "          'cookie': 'marketing_vistor_id=e6179b1a-9343-4ccf-94f3-49c0a0872691; x-uber-analytics-session-id=57834c39-001d-41d6-8f81-1f03b20885a2; udi-id=96R0deYd5NKtgpGIU0qFlFAcBzBQdTIRqsIlYJbvKhZuroYcx6SkceuzEon93iJ1/4V6+aiHnY4FEB1asER6hueGDGiVa+rD521twej17+B6ZIhp+seAhGU26SYRIVM90DgeCyb6L5jVWA7X2q7g4WwpAdBUzfnV4+M2TqnoBJ/bUQiS5a9rOHzFhVo6lCk84g8Aa3PHc6xcKn/3Hl64DQ==fvhyJitF/W+NoxdxMgTOVQ==Kt6etXM12v3JFy3hyJfCG/nDTSP3v9qMot79dk8GMWw=; udi-fingerprint=7V2Lk1cWQVIos/QhScRB15HBnqhkcKOCGGmlyheFQTMEg0HPYRClHVgbAXKyOuTxyMCjHX5izf+/kuKOvPNk6g==O7H6g5BnpRAWNqi1wXtzp3VhVYkN8W93Ly9AG8O6EGM=; isWebLogin=true; sid=QA.CAESELPLatZbSU7Lg8qY_8KCP0QYqPrDtwYiATEqJDYwOTJiYWFkLTAxYjMtNDRiYi1iZTE2LTAxZDZlMWIzYWM5YzJANjA04viKql-bHKqdO8KRgqcaOA8Bd3gDfG0CmiPwk97DHGO8s5Ji-W0mB9Zef8pkb_A5cLbehS2x5aXM9oPq1ToBMUIIdWJlci5jb20.yOuW0PNZaybw_gwwzt3JwhTGvQj1Gz5Zbq97ozXQUJA; csid=1.1727069480498.q20mz8f1Rqsav5bhlnN9H1C8urTXwC2pwyTC55BNUQc=; _ua={\"session_id\":\"0100a84e-0e1f-4622-bf55-8c2008dae428\",\"session_time_ms\":1724477480505}; mp_adec770be288b16d9008c964acfba5c2_mixpanel=%7B%22distinct_id%22%3A%20%226092baad-01b3-44bb-be16-01d6e1b3ac9c%22%2C%22%24device_id%22%3A%20%2219182de2167581-04c7044d865e5-18525637-13c680-19182de21681438%22%2C%22%24initial_referrer%22%3A%20%22https%3A%2F%2Fauth.uber.com%2F%22%2C%22%24initial_referring_domain%22%3A%20%22auth.uber.com%22%2C%22%24user_id%22%3A%20%226092baad-01b3-44bb-be16-01d6e1b3ac9c%22%7D; jwt-session=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE3MjQ0Nzc0ODYsImV4cCI6MTcyNDU2Mzg4Nn0.-UCTCgT3EU_TmGqpdksiNN7lyL1t0IYJ2PTWW8gLzHM',\n",
+    "            # Take the 'cookie' value out of the generated code from Postman\n",
+    "            # 'cookie': '',\n",
     "          'origin': 'https://drivers.uber.com',\n",
     "          'priority': 'u=1, i',\n",
     "          'referer': 'https://drivers.uber.com/earnings/activities',\n",
